# ESMA_ECB_Merging_Package

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/source/: api.md  conf.py  configuration.md  index.rst  pipeline.md  usage.md
scripts/: stage1_merge_ue_collateral_run.py  stage2_full_universe_merge_run.py  stage3_country_merge_all_production_run.py  stage4_sort_country_files_run.py
src/esma_ecb_merging_sorting/: __init__.py  country_merge_all_production.py  full_universe_merge.py  merge_ue_collateral.py  sort_country_files.py
tests/: integrity_check_input_vs_output.py  integrity_check_uk_fr.py  investigate_duplicates_pt.py  test_sort_smallest_country_file.py  verify_pt_sort.py  verify_sort_order_all_sorted_files.py  verify_stage1_random_merge.py  verify_stage3_outputs.py
